@startuml

title __POPUPWINDOW's Class Diagram__\n

  namespace  {
    namespace om.zaozhuang.newborn {
      namespace popupwindow {
        class com.zaozhuang.newborn.popupwindow.SelBabyPopupWindow {
            - activity : Activity
            + SelBabyPopupWindow()
            + onSelect()
        }
      }
    }
  }
  

  namespace  {
    namespace om.zaozhuang.newborn {
      namespace popupwindow {
        class com.zaozhuang.newborn.popupwindow.SelPicPopupWindow {
            - activity : Activity
            + SelPicPopupWindow()
            + onSelect()
        }
      }
    }
  }
  

  namespace  {
    namespace om.zaozhuang.newborn {
      namespace popupwindow {
        interface com.zaozhuang.newborn.popupwindow.SelPicPopupWindow.OnSelectResultListener {
            {abstract} + onSelect()
        }
      }
    }
  }
  

  com.zaozhuang.newborn.popupwindow.SelBabyPopupWindow .up.|> com.lxj.xpopup.interfaces.OnSelectListener
  com.zaozhuang.newborn.popupwindow.SelBabyPopupWindow -up-|> com.lxj.xpopup.impl.BottomListPopupView
  com.zaozhuang.newborn.popupwindow.SelBabyPopupWindow o-- com.zaozhuang.newborn.db.entity.Baby : baby
  com.zaozhuang.newborn.popupwindow.SelPicPopupWindow .up.|> com.lxj.xpopup.interfaces.OnSelectListener
  com.zaozhuang.newborn.popupwindow.SelPicPopupWindow -up-|> com.lxj.xpopup.impl.BottomListPopupView
  com.zaozhuang.newborn.popupwindow.SelPicPopupWindow o-- com.zaozhuang.newborn.popupwindow.SelPicPopupWindow.OnSelectResultListener : onSelectResultListener
  com.zaozhuang.newborn.popupwindow.SelPicPopupWindow +-down- com.zaozhuang.newborn.popupwindow.SelPicPopupWindow.OnSelectResultListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
